--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -1,2 +1,35 @@
-// you can change colors here
+@import "/terwer.css";
+
 $theme-color: #096dd9;
+$font-family-terwer: '"Open Sans", "LXGW WenKai", "JetBrains Mono", "-apple-system", "Microsoft YaHei", "Times New Roman", "方正北魏楷书_GBK"';
+
+/* layout */
+// navbar
+$navbar-height: 3.75rem !default;
+$navbar-horizontal-padding: 1.5rem !default;
+$navbar-vertical-padding: 0.7rem !default;
+$navbar-mobile-height: 3.25rem !default;
+$navbar-mobile-horizontal-padding: 1rem !default;
+$navbar-mobile-vertical-padding: 0.5rem !default;
+
+// sidebar
+$sidebar-width: 18rem !default;
+$sidebar-mobile-width: 16rem !default;
+
+// content
+// $content-width: 780px !default;
+$content-width: 1160px;
+// $home-page-width: 1160px !default;
+$home-page-width: 1160px;
+
+// font
+$font-family: $font-family-terwer;
+$font-family-heading: $font-family-terwer;
+
+// code
+$font-family-mono: $font-family-terwer;
+$line-numbers-width: 2.5rem !default;
+
+// transition
+$color-transition: "0.3s ease" !default;
+$transform-transition: "0.3s ease" !default;
